// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavTabCarousel /> with links prop matches with snapshot 1`] = `
<div
  className="sc-iwsKbI hmMuqr"
>
  <div
    className="sc-ifAKCX iGsRDJ"
  >
    <svg
      className="sc-bdVaJa bxGcNc sc-EHOje fRNqx"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-bZQynM fguCgi"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-dnqmqq cSGWTX"
  >
    <a
      className="sc-htoDjs bXwzCf"
      href="http://www.google.com"
    />
    <a
      className="sc-htoDjs bjyWyY"
      href="http://www.cowboybebop.com"
    />
    <a
      className="sc-htoDjs bXwzCf"
      href="http://www.starwars.com"
    />
  </div>
  <div
    className="sc-bxivhb iGkdfL"
  >
    <div
      className="sc-gzVnrw ehiXuV"
    >
      Foobar 2
    </div>
    <svg
      className="sc-bdVaJa Afqxo sc-EHOje fRNqx"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;

exports[`<NavTabCarousel /> with totalIndex prop matches with snapshot 1`] = `
<div
  className="sc-iwsKbI hmMuqr"
>
  <div
    className="sc-ifAKCX iGsRDJ"
  >
    <svg
      className="sc-bdVaJa bxGcNc sc-EHOje fRNqx"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
    <div
      className="sc-bZQynM fguCgi"
    >
      Foobar 1
    </div>
  </div>
  <div
    className="sc-dnqmqq cSGWTX"
  >
    <div
      className="sc-htoDjs bXwzCf"
    />
    <div
      className="sc-htoDjs bjyWyY"
    />
    <div
      className="sc-htoDjs bXwzCf"
    />
  </div>
  <div
    className="sc-bxivhb iGkdfL"
  >
    <div
      className="sc-gzVnrw ehiXuV"
    >
      Foobar 2
    </div>
    <svg
      className="sc-bdVaJa Afqxo sc-EHOje fRNqx"
      fill="#fff"
      height="5.64"
      viewBox="0 0 8.48 5.64"
      width="8.48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
      />
    </svg>
  </div>
</div>
`;
